main_project_code/TeamProject/iCollections/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
  white-space: normal;
  text-align: center;
  word-break: break-all;
}

/* Provide sufficient contrast against white background */

a {
  color: #0366d6;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */

html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.border-top {
  border-top: 1px solid #e5e5e5;
}

.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  white-space: nowrap;
  line-height: 60px;
  /* Vertically center the text there */
}

.border-me {
  border: 1px solid black;
}

.news {
  line-height: 60px;
  margin-left: 0px;
  margin-right: 0px;
}

.ago {
  text-align: right;
}

.fake-image {
  height: 50px;
  width: 50px;
  background-color: black;
  display: inline-block;
}

.post-info {
  display: inline-block;
  vertical-align: top;
  margin-left: 12px;
}

.activity {
  line-height: 0.9;
}

.post {
  padding-top: 25px;
  padding-bottom: 25px;
  padding-left: 15px;
  padding-right: 15px;
}

.thumbnail {
  font-size: 2.5em;
}

.date {
  margin-top: 4px;
}

.feed {
  background-color: #e5e5e5;
}

.feed-object {
  background-color: #fff;
  margin-top: 20px;
  border-radius: 5px;
}

.last-object {
  margin-bottom: 20px;
}

#upload {
  opacity: 0;
}

#upload-label {
  position: absolute;
  top: 50%;
  left: 1rem;
  transform: translateY(-50%);
}

.image-area {
  border: 2px dashed rgba(0, 0, 0, 0.7);
  padding: 1rem;
  position: relative;
}

.image-area::before {
  content: 'Uploaded image result';
  color: #555555;
  font-weight: bold;
  text-transform: uppercase;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 0.8rem;
  z-index: 1;
}

.image-area img {
  z-index: 2;
  position: relative;
}

body {
  min-height: 100vh;
  background-color: #757f9a;
  background-image: linear-gradient(147deg, #ddd 0%, #fff 100%);
}

h1 {
  font-weight: bold;
}

.right-button {
  margin-top: 25px;
  display: block;
  margin-left: auto;
  margin-right: 0;
}

/*Home Page Styles */

.clear-section {
  background-color: #fff;
}

.silver-section {
  background-color: #e5e5e5;
}

.container-fluid {
  padding: 7% 15%;
}

.main-title {
  font-size: 3.7rem;
  line-height: 1.5;
  text-align: left;
}

.landing-image {
  height: 45%;
  /* padding-left: 110px; */
  margin: 5px;
}

.options {
  padding: 20px;
}

.big-name {
  font-size: 15px;
  font-weight: bold;
}

.simple-option {
  padding: 5px 0;
}

.dashboard-profile-header {
  margin-bottom: 23px;
  max-width: 95%;
  height: auto;
  /* padding-left: 110px; */
  margin: 5px;
}

.carousel-custome-text {
  color: #000000;
  font-size: large;
  background-color: #ffffff;
}

.carousel-control-prev {
  color: #000000;
}

.middle-input {
  margin-bottom: 30px;
  width: 65%;
  margin-left: auto;
  margin-right: auto;
}

#customNameError {
  color: red;
}

#uploadPhotoError {
  color: red;
}

/* UserPage Styles */

.user-profile-obj {
  background-color: whitesmoke;
  border: 1px solid grey;
  padding: 1em 1em 1em 1em;
}

.user-profile-img {
  width: 150px;
  height: 150px;
  background-color: dimgrey;
  border: 1px solid grey;
  border-radius: 1em;
}

.about-me {
  background-color: lightgray;
  border: 1px solid grey;
  border-radius: 1em;
  padding: 1em 1em 1em 1em;
}

.user-profile-nav {
  background-color: darkgrey;
  padding: 0em 0em 0em 0em;
  text-align: center;
}

.user-profile-nav a {
  display: block;
  padding: 0.1em 0.1em 0.1em 0.1em;
  margin: 0.0em 0.0em 0.0em 0.0em;
  color: black;
}

.user-profile-nav li:hover {
  background-color: lightslategrey;
  color: lightblue;
}

/* Follower Navigation Page */

.user-follow-block {
  background-color: lightgrey;
  border: 1px solid grey;
}

.user-follows {
  background-color: whitesmoke;
  border: 1px solid lightgrey;
}

/* Collection Navigation Page */

.collection-container {
  background-color: whitesmoke;
  border: 1px solid lightgrey
}

.keyword-container {
    background-color: lightgrey;
    border: 1px solid grey;
    overflow:scroll;
}

/* Navbar Styles */

.navbar-primary {
    margin-bottom: 0px;
}

.navbar-secondary {
    margin-top: 0px;
    min-height: 1em;
    font-size: 0.9rem;
}

.search-bar {
  position: relative;
  background-color: lightgrey;
  border: 1px solid grey;
  overflow: scroll;
}

